# ai-piano-mvp

./: .gitignore  Note.txt  README.md  package-lock.json  package.json
app/: page.tsx
backend/: .env  .env.example  README.md  pyproject.toml
backend/ai_piano_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: main.py
frontend/: README.md  package-lock.json  package.json
frontend/.next/: trace
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js  next.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/static/chunks/app/: layout.js  page.js
frontend/.next/static/css/app/: layout.css
frontend/.next/types/app/: layout.ts  page.ts
frontend/app/: globals.css  layout.tsx  page.tsx
